  Patched ltmain.sh for wince support.
  Added PNG_CONVERT_tIME_SUPPORTED macro.

version 1.2.41beta14 [November 8, 2009]
  versions 1.2.41beta05 through 1.2.41beta13 were abandoned.
  The 1.0.x/1.2.x series will only receive security updates from now on.
  Make inclusion of time.h in pngconf.h depend on PNG_CONVERT_tIME_SUPPORTED
  Make #define PNG_CONVERT_tIME_SUPPORTED depend on PNG_WRITE_tIME_SUPPORTED
  Reverted iTXt compatibility stuff from 1.2.41beta05, 1.2.41beta11, and
    1.2.41beta12.
  Reverted IOSTATE feature, user_cache_max, and premultiply_alpha features
    from 1.2.41beta08.
  Retained png_calloc() from 1.2.41beta08 but as a non-exported function,
    and removed reference to png_calloc from scripts/*.def

version 1.2.41beta15 [November 8, 2009]
  Added PNG_DEPSTRUCT, PNG_DEPRECATED, PNG_USE_RESULT, PNG_NORETURN, and
    PNG_ALLOCATED macros to detect deprecated direct access to the
    png_struct or info_struct members and other deprecated usage in
    applications (John Bowler).
  Updated scripts/makefile* to add "-DPNG_CONFIGURE_LIBPNG" to CFLAGS,
    to prevent warnings about direct access to png structs by libpng
    functions while building libpng.  They need to be tested, especially
    those using compilers other than gcc.
  Updated projects/visualc6 and visualc71 with "/d PNG_CONFIGURE_LIBPNG".

version 1.2.41beta16 [November 9, 2009]
  Removed three direct references to read_info_ptr members in pngtest.c
    that were detected by the new PNG_DEPSTRUCT macro.
  Only #define PNG_DEPSTRUCT, etc. in pngconf.h if not already defined.

version 1.2.41beta17 [November 9, 2009]
  Updated CMakeLists.txt to add "-DPNG_CONFIGURE_LIBPNG" to the definitions.
  Marked deprecated function prototypes with PNG_DEPRECATED.

Send comments/corrections/commendations to png-mng-implement at lists.sf.net
(subscription required; visit
https://lists.sourceforge.net/lists/listinfo/png-mng-implement
to subscribe)
or to glennrp at users.sourceforge.net

Glenn R-P
*/